#8 Introduce FileSourceId